[project]
authors = [{ name = "Alex", email = "zurka@test.com" }]
name = "test2"
version = "0.1.0"
description = "trial task"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic==2.9.2",
    "pydantic-settings>=2.7.1",
    "jq>=1.8.0",
    "einops>=0.8.0",
    "datasets>=3.2.0",
    "pandas>=2.2.3",
    "ollama>=0.5.1",
]


[tool.uv]
dev-dependencies = ["langchain-cli>=0.0.35", "ruff>=0.9.3"]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
